# bike_rental_prediction

./: .gitignore  README.md  mypy.ini  setup.py
bikeshare_model/: config.yml  pipeline.py  predict.py  pyproject.toml  train_pipeline.py
bikeshare_model/config/: core.py
bikeshare_model/processing/: data_manager.py  features.py  validataion.py
bikeshare_model/tests/: conftest.py  test_features.py  test_predictions.py
requirements/: requirements.txt
